<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg"
    android:padding="20dp"
    tools:context="solutions.webdealer.project.wassel.activities.registrations.ForgotPassword">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/enterEmail"
        android:textSize="20sp"
        android:textColor="@color/colorWhite"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/sendInstructions"
        android:textSize="20sp"
        android:textColor="@color/colorWhite"/>

    <EditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:padding="5dp"
        android:inputType="textEmailAddress"
        android:hint="@string/registeredEmail"
        android:textColor="@color/colorBlack"
        android:textColorHint="@color/colorSilver"
        android:background="@drawable/edit_text_design"/>

    <Button
        android:id="@+id/bt_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:background="@drawable/driver_button_design"
        android:text="@string/submit"/>

</LinearLayout>
