<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_register_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg"
    android:paddingLeft="50dp"
    android:paddingRight="50dp"
    android:paddingTop="20dp"
    tools:context="solutions.webdealer.project.wassel.activities.registrations.RegisterMain">

    <TextView
        android:id="@+id/tv_signUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:text="@string/signUpAs"
        android:textSize="25sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/ll_register_user"
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:layout_marginBottom="10dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal"
            android:background="@drawable/panel">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/user_icon"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:gravity="center"
                android:text="@string/user"
                android:textSize="25sp"
                android:textStyle="bold"
                android:textColor="@color/colorAppBlue"
                android:textAllCaps="true"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_register_driver"
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:background="@drawable/panel">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/driver_icon"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:gravity="center"
                android:text="@string/driver"
                android:textSize="25sp"
                android:textStyle="bold"
                android:textColor="@color/colorBlack"
                android:textAllCaps="true"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="50dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/alreadyMember"/>

            <TextView
                android:id="@+id/tv_alreadyLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/logIn"
                android:textColor="@color/colorAppYellow"/>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
