<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:paddingLeft="5dp"
    android:paddingRight="5dp"
    android:paddingTop="10dp"
    tools:context="solutions.webdealer.project.wassel.activities.registrations.RegisterDriver">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_driver"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:text="@string/signUp"
            android:textSize="40sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginBottom="20dp">

            <TextView
                android:id="@+id/tv_firstName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/firstName"
                android:textColor="@color/colorWhite" />

            <EditText
                android:id="@+id/et_firstName"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_toRightOf="@id/tv_firstName"
                android:background="@drawable/edit_text_design"
                android:inputType="textPersonName"
                android:padding="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:textColor="@color/colorBlack" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginBottom="20dp">

            <TextView
                android:id="@+id/tv_lastName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lastName"
                android:textColor="@color/colorWhite" />

            <EditText
                android:id="@+id/et_lastName"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_toRightOf="@id/tv_firstName"
                android:background="@drawable/edit_text_design"
                android:inputType="textPersonName"
                android:padding="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:textColor="@color/colorBlack" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/linear_1"
            android:gravity="center"
            android:layout_marginBottom="20dp">

            <TextView
                android:id="@+id/tv_emailID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/emailId"
                android:textColor="@color/colorWhite" />

            <EditText
                android:id="@+id/et_emailId"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_toRightOf="@id/tv_emailID"
                android:background="@drawable/edit_text_design"
                android:inputType="textEmailAddress"
                android:padding="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:textColor="@color/colorBlack" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/linear_2"
            android:gravity="center"
            android:layout_marginBottom="20dp">

            <TextView
                android:id="@+id/tv_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textColor="@color/colorWhite" />

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_toRightOf="@id/tv_password"
                android:background="@drawable/edit_text_design"
                android:inputType="textPassword"
                android:padding="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:textColor="@color/colorBlack" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/linear_3"
            android:gravity="center"
            android:layout_marginBottom="20dp">

            <TextView
                android:id="@+id/tv_confirmPass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_password"
                android:text="@string/confirmPassword"
                android:textColor="@color/colorWhite" />

            <EditText
                android:id="@+id/et_confirmPass"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_below="@id/et_password"
                android:layout_toRightOf="@id/tv_confirmPass"
                android:background="@drawable/edit_text_design"
                android:inputType="textPassword"
                android:padding="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:textColor="@color/colorBlack" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/linear_4"
            android:gravity="center"
            android:layout_marginBottom="20dp">

            <TextView
                android:id="@+id/tv_mobile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_confirmPass"
                android:text="@string/mobile"
                android:textColor="@color/colorWhite" />

            <EditText
                android:id="@+id/et_mobile"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_below="@id/et_confirmPass"
                android:layout_toRightOf="@id/tv_mobile"
                android:background="@drawable/edit_text_design"
                android:inputType="phone"
                android:padding="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:textColor="@color/colorBlack" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/linear_5"
            android:gravity="center"
            android:layout_marginBottom="20dp">

            <TextView
                android:id="@+id/tv_city"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_mobile"
                android:text="@string/city"
                android:textColor="@color/colorWhite" />

            <Spinner
                android:id="@+id/sp_city"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:background="@drawable/spinner_design"
                android:overlapAnchor="false"
                android:popupBackground="@color/colorWhite" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/linear_6"
            android:layout_marginBottom="20dp"
            android:gravity="center">

            <CheckBox
                android:id="@+id/checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/terms" />

        </LinearLayout>

        <Button
            android:id="@+id/bt_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:background="@drawable/driver_button_design"
            android:text="@string/register" />

    </LinearLayout>

</ScrollView>
